--- a/charts/templates/base.html
+++ b/charts/templates/base.html
@@ -11,9 +11,13 @@
     <!-- Include fusion theme -->
     <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/themes/fusioncharts.theme.fusion.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <title>chart creation</title>
-    <style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" ></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.default.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/js/standalone/selectize.min.js"></script>
+<style>
       .nav-link{
     color: white;
 }
@@ -58,9 +62,9 @@
               </li>
             </ul>
             {% if request.user.is_authenticated %}
-            <a href="/accounts/logout/" class="btn btn-outline-danger">LOGOUT</a>
+            <a href="/accounts/logout/" class="btn btn-danger">LOGOUT</a>
             {% else %}
-            <a href="/accounts/login/" class="btn btn-outline-success">LOGIN</a>
+            <a href="/accounts/login/" class="btn btn-primary">LOGIN</a>
             {% endif %}
             <!-- <button class="btn btn-outline-success" type="submit">Search</button>
             <button class="btn btn-outline-success" type="submit">Search</button> -->
@@ -76,5 +80,6 @@
 
 {% endblock %}
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
 </html>
