--- a/charts/templates/base.html
+++ b/charts/templates/base.html
@@ -15,8 +15,8 @@
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" ></script>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.default.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/js/standalone/selectize.min.js"></script>
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/css/selectize.default.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.1/js/standalone/selectize.min.js"></script> -->
 <style>
       .nav-link{
     color: white;
@@ -50,7 +50,7 @@
                 <a class="nav-link " aria-current="page" href="/chart-list/">all charts</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="/create-dashboard/">create dshboard</a>
+                <a class="nav-link " aria-current="page" href="/create-dashboard2/">create dshboard</a>
               </li>
               <li class="nav-item dropdown ">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
